--- a/Content/index.scss
+++ b/Content/index.scss
@@ -12,7 +12,7 @@
 body {
     font-size: 16px;
     font-family: 'Open Sans', Helvetica, Arial, "Lucida Grande", sans- serif;
-    background: #FAFAFA;
+    background: #EEEFF0;
 }
 
 .clear-both {
@@ -21,7 +21,7 @@ body {
 
 h1, h2, h3 {
     font-family: Helvetica, Arial, "Lucida Grande", sans- serif;
-    border-bottom: solid 1px #21C40B;
+    margin-bottom: 24px;
 }
 
 header {
@@ -48,7 +48,6 @@ code {
 }
 
 h2, h3, a {
-    margin: 1% 0;
     color: #51AD38;
 }
 
@@ -87,7 +86,7 @@ main {
 footer {
     clear: both;
     width: 100%;
-    padding: 3% 0%;
+    padding: 3% 0;
     text-align: center;
     background: #2d2d2d;
 
@@ -181,14 +180,15 @@ thead, thead th {
 }
 
 /* --- Simple Box --- */
-.box {
-    background: #eeeeee;
+.card {
+    background: #fff;
     color: #2d2d2d;
-    padding: 2%;
+    padding: 12px;
     width: 100%;
     margin: 0;
     overflow: hidden;
-    border: 1px solid #ccc;
+    -webkit-box-shadow: 0 0 1px 0 rgba(42,52,64,.12);
+    box-shadow: 0 0 1px 0 rgba(42,52,64,.12);
 }
 
 /* Core Grid */
