--- a/Src/coreGrid.scss
+++ b/Src/coreGrid.scss
@@ -3,7 +3,7 @@
 /*! 
     https://github.com/splintercode/CoreGrid
     MIT License http://opensource.org/licenses/MIT
-    Core Grid 1.8.0
+    Core Grid 1.9.0
 */
 
 $container-width: 1100px;
@@ -182,6 +182,31 @@ ul, ol, dl, blockquote, p, address,
 table, fieldset, figure, pre, .header, img {
     margin: 0;
     margin-bottom: 1.5rem;
+}
+
+/* --- Flexbox helpers --- */
+.flex {
+    display: -ms-flexbox; /* IE 10 */
+    display: -webkit-flex;
+    display: flex;
+}
+  
+.flex-row {
+    display: -ms-flexbox; /* IE 10 */
+    display: -webkit-flex;
+    display: flex;
+    -ms-flex-flow: row wrap;
+    -webkit-flex-flow: row wrap;
+    flex-flow: row wrap;
+}
+     
+.flex-vertical-align {
+    display: -ms-flexbox; /* IE 10 */
+    display: -webkit-flex;
+    display: flex;
+    -ms-flex-item-align: center; /* IE 10 */
+    -webkit-align-self: center;
+    align-self: center;
 }
 
 /* --- Layout helpers --- */
