--- a/src/core-grid.scss
+++ b/src/core-grid.scss
@@ -3,7 +3,7 @@
 /*! 
     https://github.com/splintercode/CoreGrid
     MIT License http://opensource.org/licenses/MIT
-    Core Grid 1.9.0
+    Core Grid 1.10.1
 */
 
 $container-width: 1100px;
@@ -64,10 +64,18 @@ html {
 }
 
 .row {
-    clear: both;
-    overflow: hidden;
     margin-left: -8px;
     margin-right: -8px;
+
+    &:before, &:after {
+        content: " ";
+        display: table;
+        width: 0;
+    }
+
+    &:after {
+        clear: both;
+    }
 }
 
 /* #region --- Contain Box wrappers --- */
